--- a/snippet/package.json
+++ b/snippet/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "dev": "rollup --watch --config rollup.config.js",
-    "prebuild": "rimraf dist/*",
+    "prebuild": "rimraf dist",
     "build": "rollup --config rollup.config.js"
   },
   "dependencies": {
